// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput - basic functionality: After gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
  "$style": undefined,
}
`;

exports[`MaskedInput - basic functionality: After gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
  "$style": undefined,
}
`;

exports[`MaskedInput - basic functionality: Before gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
  "$style": undefined,
}
`;

exports[`MaskedInput - basic functionality: Before gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$positive": false,
  "$required": false,
  "$size": "default",
  "$style": undefined,
}
`;

exports[`MaskedInput - basic functionality: Masked input has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-errormessage": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "autoComplete": "on",
  "disabled": false,
  "id": undefined,
  "inputMode": "text",
  "max": undefined,
  "min": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [Function],
  "onFocus": [Function],
  "onKeyDown": [MockFunction],
  "onKeyPress": [MockFunction],
  "onKeyUp": [MockFunction],
  "onMouseDown": [Function],
  "onPaste": [Function],
  "pattern": null,
  "placeholder": "Placeholder",
  "required": false,
  "rows": null,
  "styled-component": "true",
  "test-style": "{
  \\"boxSizing\\": \\"border-box\\",
  \\"backgroundColor\\": \\"transparent\\",
  \\"borderLeftWidth\\": 0,
  \\"borderRightWidth\\": 0,
  \\"borderTopWidth\\": 0,
  \\"borderBottomWidth\\": 0,
  \\"borderLeftStyle\\": \\"none\\",
  \\"borderRightStyle\\": \\"none\\",
  \\"borderTopStyle\\": \\"none\\",
  \\"borderBottomStyle\\": \\"none\\",
  \\"outline\\": \\"none\\",
  \\"width\\": \\"100%\\",
  \\"maxWidth\\": \\"100%\\",
  \\"cursor\\": \\"text\\",
  \\"margin\\": \\"0\\",
  \\"paddingTop\\": \\"$theme.sizing.scale400\\",
  \\"paddingBottom\\": \\"$theme.sizing.scale400\\",
  \\"paddingLeft\\": \\"$theme.sizing.scale550\\",
  \\"paddingRight\\": \\"$theme.sizing.scale550\\",
  \\"fontFamily\\": \\"$theme.typography.font300.fontFamily\\",
  \\"fontSize\\": \\"$theme.typography.font300.fontSize\\",
  \\"fontWeight\\": \\"$theme.typography.font300.fontWeight\\",
  \\"lineHeight\\": \\"$theme.typography.font300.lineHeight\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"caretColor\\": \\"$theme.colors.contentPrimary\\",
  \\"::placeholder\\": {
    \\"color\\": \\"$theme.colors.inputPlaceholder\\"
  }
}",
  "type": "text",
  "value": "(123) 456-7890",
}
`;
